# DRF_auth

./: docker-compose.yml  pyproject.toml  requirements.txt
accounts/: forms.py
accounts/migrations/: 0002_alter_customuser_id.py
config/: settings.py  urls.py
skyscrapers/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
skyscrapers/migrations/: 0001_initial.py
