[tool.poetry]
name = "drf_auth"
version = "0.1.0"
description = ""
authors = ["abdalazez <abdalazzezzalsalahat@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
whitenoise = "^5.2.0"
django-debug-toolbar = "^3.2.1"
django-crispy-forms = "^1.12.0"
django-allauth = "^0.44.0"
Django = "^3.2.4"
psycopg2-binary = "^2.9.1"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.7.1"
gunicorn = "^20.1.0"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
djangorestframework = "^3.12.4"
Django = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
